# openclaw-dev-sandbox

./: README.md  TEST_REVIEW.md  weather.py
.github/workflows/: ci.yml  cto-review.yml  review-by-cto.yml
bg_removal/: .dockerignore  Dockerfile  README.md  pyproject.toml  start.sh
bg_removal/bg_removal/: __init__.py  cli.py  core.py  web.py
bg_removal/bg_removal/static/: index.html  style.css
bg_removal/tests/: test_core.py  test_web.py
bg_removal/web/: index.html  script.js  style.css
